Add Pages collection

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -49,3 +49,18 @@ collections:
       - { label: 'Description', name: 'description', required: false }
       - { label: 'Image', name: 'image', widget: 'image', allow_multiple: false, required: false }
       - { label: 'Body', name: 'body', widget: 'markdown' }
+  - name: 'pages'
+    label: 'Pages'
+    label_singular: 'Page'
+    folder: 'src/pages'
+    path: '{{id}}'
+    create: true
+    slug: '{{id}}'
+    identifier_field: 'title'
+    extension: 'md'
+    format: 'frontmatter'
+    fields:
+      - { label: 'Slug', name: 'id', widget: 'string' }
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Description', name: 'description', required: false }
+      - { label: 'Body', name: 'body', widget: 'markdown' }
